# cpp-keshe

./: .gitignore  CMakeLists.txt  Makefile  README.md  parking_api_server  parking_system  test_api.sh  拷打记录.md  项目技术文档.md
src/backend/: api_server.cpp  api_server.h  main.cpp  parking_lot.cpp  parking_lot.h  vehicle.cpp  vehicle.h
src/backend/include/: api_server.h  crow_server.h  parking_lot.h  vehicle.h
src/backend/include/crow/: socket_adaptors.h
src/frontend/: index.html
src/frontend/css/: style.css
src/frontend/js/: api.js  config.js  main.js
